OSGeo4W/apps/grass/grass-6.4.2RC2/etc/python/grass/lib/g3d.py


# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 373
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_keyGetValue'):
    G3d_keyGetValue = _libs['grass_g3d.6.4.2RC2'].G3d_keyGetValue
    G3d_keyGetValue.restype = c_int
    G3d_keyGetValue.argtypes = [POINTER(struct_Key_Value), String, String, String, c_int, c_int, POINTER(c_int)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 375
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_keySetInt'):
    G3d_keySetInt = _libs['grass_g3d.6.4.2RC2'].G3d_keySetInt
    G3d_keySetInt.restype = c_int
    G3d_keySetInt.argtypes = [POINTER(struct_Key_Value), String, POINTER(c_int)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 376
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_keySetDouble'):
    G3d_keySetDouble = _libs['grass_g3d.6.4.2RC2'].G3d_keySetDouble
    G3d_keySetDouble.restype = c_int
    G3d_keySetDouble.argtypes = [POINTER(struct_Key_Value), String, POINTER(c_double)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 377
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_keySetString'):
    G3d_keySetString = _libs['grass_g3d.6.4.2RC2'].G3d_keySetString
    G3d_keySetString.restype = c_int
    G3d_keySetString.argtypes = [POINTER(struct_Key_Value), String, POINTER(POINTER(c_char))]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 378
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_keySetValue'):
    G3d_keySetValue = _libs['grass_g3d.6.4.2RC2'].G3d_keySetValue
    G3d_keySetValue.restype = c_int
    G3d_keySetValue.argtypes = [POINTER(struct_Key_Value), String, String, String, c_int, c_int, POINTER(c_int)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 381
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_longEncode'):
    G3d_longEncode = _libs['grass_g3d.6.4.2RC2'].G3d_longEncode
    G3d_longEncode.restype = c_int
    G3d_longEncode.argtypes = [POINTER(c_long), POINTER(c_ubyte), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 382
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_longDecode'):
    G3d_longDecode = _libs['grass_g3d.6.4.2RC2'].G3d_longDecode
    G3d_longDecode.restype = None
    G3d_longDecode.argtypes = [POINTER(c_ubyte), POINTER(c_long), c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 385
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_makeMapsetMapDirectory'):
    G3d_makeMapsetMapDirectory = _libs['grass_g3d.6.4.2RC2'].G3d_makeMapsetMapDirectory
    G3d_makeMapsetMapDirectory.restype = None
    G3d_makeMapsetMapDirectory.argtypes = [String]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 388
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_maskClose'):
    G3d_maskClose = _libs['grass_g3d.6.4.2RC2'].G3d_maskClose
    G3d_maskClose.restype = c_int
    G3d_maskClose.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 389
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_maskFileExists'):
    G3d_maskFileExists = _libs['grass_g3d.6.4.2RC2'].G3d_maskFileExists
    G3d_maskFileExists.restype = c_int
    G3d_maskFileExists.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 390
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_maskOpenOld'):
    G3d_maskOpenOld = _libs['grass_g3d.6.4.2RC2'].G3d_maskOpenOld
    G3d_maskOpenOld.restype = c_int
    G3d_maskOpenOld.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 391
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_maskReopen'):
    G3d_maskReopen = _libs['grass_g3d.6.4.2RC2'].G3d_maskReopen
    G3d_maskReopen.restype = c_int
    G3d_maskReopen.argtypes = [c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 392
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_isMasked'):
    G3d_isMasked = _libs['grass_g3d.6.4.2RC2'].G3d_isMasked
    G3d_isMasked.restype = c_int
    G3d_isMasked.argtypes = [POINTER(G3D_Map), c_int, c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 393
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_maskNum'):
    G3d_maskNum = _libs['grass_g3d.6.4.2RC2'].G3d_maskNum
    G3d_maskNum.restype = None
    G3d_maskNum.argtypes = [POINTER(G3D_Map), c_int, c_int, c_int, POINTER(None), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 394
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_maskFloat'):
    G3d_maskFloat = _libs['grass_g3d.6.4.2RC2'].G3d_maskFloat
    G3d_maskFloat.restype = None
    G3d_maskFloat.argtypes = [POINTER(G3D_Map), c_int, c_int, c_int, POINTER(c_float)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 395
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_maskDouble'):
    G3d_maskDouble = _libs['grass_g3d.6.4.2RC2'].G3d_maskDouble
    G3d_maskDouble.restype = None
    G3d_maskDouble.argtypes = [POINTER(G3D_Map), c_int, c_int, c_int, POINTER(c_double)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 396
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_maskTile'):
    G3d_maskTile = _libs['grass_g3d.6.4.2RC2'].G3d_maskTile
    G3d_maskTile.restype = None
    G3d_maskTile.argtypes = [POINTER(G3D_Map), c_int, POINTER(None), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 397
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_maskOn'):
    G3d_maskOn = _libs['grass_g3d.6.4.2RC2'].G3d_maskOn
    G3d_maskOn.restype = None
    G3d_maskOn.argtypes = [POINTER(G3D_Map)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 398
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_maskOff'):
    G3d_maskOff = _libs['grass_g3d.6.4.2RC2'].G3d_maskOff
    G3d_maskOff.restype = None
    G3d_maskOff.argtypes = [POINTER(G3D_Map)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 399
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_maskIsOn'):
    G3d_maskIsOn = _libs['grass_g3d.6.4.2RC2'].G3d_maskIsOn
    G3d_maskIsOn.restype = c_int
    G3d_maskIsOn.argtypes = [POINTER(G3D_Map)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 400
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_maskIsOff'):
    G3d_maskIsOff = _libs['grass_g3d.6.4.2RC2'].G3d_maskIsOff
    G3d_maskIsOff.restype = c_int
    G3d_maskIsOff.argtypes = [POINTER(G3D_Map)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 401
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_maskFile'):
    G3d_maskFile = _libs['grass_g3d.6.4.2RC2'].G3d_maskFile
    G3d_maskFile.restype = ReturnString
    G3d_maskFile.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 402
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_maskMapExists'):
    G3d_maskMapExists = _libs['grass_g3d.6.4.2RC2'].G3d_maskMapExists
    G3d_maskMapExists.restype = c_int
    G3d_maskMapExists.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 405
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_g3dType2cellType'):
    G3d_g3dType2cellType = _libs['grass_g3d.6.4.2RC2'].G3d_g3dType2cellType
    G3d_g3dType2cellType.restype = c_int
    G3d_g3dType2cellType.argtypes = [c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 406
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_copyFloat2Double'):
    G3d_copyFloat2Double = _libs['grass_g3d.6.4.2RC2'].G3d_copyFloat2Double
    G3d_copyFloat2Double.restype = None
    G3d_copyFloat2Double.argtypes = [POINTER(c_float), c_int, POINTER(c_double), c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 407
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_copyDouble2Float'):
    G3d_copyDouble2Float = _libs['grass_g3d.6.4.2RC2'].G3d_copyDouble2Float
    G3d_copyDouble2Float.restype = None
    G3d_copyDouble2Float.argtypes = [POINTER(c_double), c_int, POINTER(c_float), c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 408
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_copyValues'):
    G3d_copyValues = _libs['grass_g3d.6.4.2RC2'].G3d_copyValues
    G3d_copyValues.restype = None
    G3d_copyValues.argtypes = [POINTER(None), c_int, c_int, POINTER(None), c_int, c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 409
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_length'):
    G3d_length = _libs['grass_g3d.6.4.2RC2'].G3d_length
    G3d_length.restype = c_int
    G3d_length.argtypes = [c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 410
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_externLength'):
    G3d_externLength = _libs['grass_g3d.6.4.2RC2'].G3d_externLength
    G3d_externLength.restype = c_int
    G3d_externLength.argtypes = [c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 413
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_isNullValueNum'):
    G3d_isNullValueNum = _libs['grass_g3d.6.4.2RC2'].G3d_isNullValueNum
    G3d_isNullValueNum.restype = c_int
    G3d_isNullValueNum.argtypes = [POINTER(None), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 414
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_setNullValue'):
    G3d_setNullValue = _libs['grass_g3d.6.4.2RC2'].G3d_setNullValue
    G3d_setNullValue.restype = None
    G3d_setNullValue.argtypes = [POINTER(None), c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 418
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_openCellOldNoHeader'):
    G3d_openCellOldNoHeader = _libs['grass_g3d.6.4.2RC2'].G3d_openCellOldNoHeader
    G3d_openCellOldNoHeader.restype = POINTER(None)
    G3d_openCellOldNoHeader.argtypes = [String, String]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 419
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_openCellOld'):
    G3d_openCellOld = _libs['grass_g3d.6.4.2RC2'].G3d_openCellOld
    G3d_openCellOld.restype = POINTER(None)
    G3d_openCellOld.argtypes = [String, String, POINTER(G3D_Region), c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 420
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_openCellNew'):
    G3d_openCellNew = _libs['grass_g3d.6.4.2RC2'].G3d_openCellNew
    G3d_openCellNew.restype = POINTER(None)
    G3d_openCellNew.argtypes = [String, c_int, c_int, POINTER(G3D_Region)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 423
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_setStandard3dInputParams'):
    G3d_setStandard3dInputParams = _libs['grass_g3d.6.4.2RC2'].G3d_setStandard3dInputParams
    G3d_setStandard3dInputParams.restype = None
    G3d_setStandard3dInputParams.argtypes = []
